@@ -310,7 +310,7 @@ jsp.dspace-admin.item-select.heading                            = Select an Item
 jsp.dspace-admin.item-select.id                                 = Internal ID:
 jsp.dspace-admin.item-select.text                               = <strong>The ID you entered isn't a valid item ID.</strong>  If you're trying to edit a community or collection, you need to use the <a href="{0}">communities/collections admin page</a>.
 jsp.dspace-admin.item-select.title                              = Select Item
-jsp.dspace-admin.license-edit.description                       = Edit the default license by using the text box below. The license cannot be empty. <br />Please ensure the license meets the legal conditions of your country. <br />Changing this license will not affect those items already published and collections with their own licenses.
+jsp.dspace-admin.license-edit.description                       = Edit the default license by using the text box below. The license cannot be empty. <br />Please ensure the license meets the legal conditions of your country. <br />Changing this license will not affect those items already published and collections with their own licenses. <br/>There are some substitution variables that can be used to create personalized licenses, check the help pages for details.<br/>It is recommended to use a dummy submission to check the license change:  <b>check the resulting license in the Accept/reject Licence step.</b>
 jsp.dspace-admin.license-edit.edited                            = The Default License has been updated
 jsp.dspace-admin.license-edit.empty                             = You must enter a license!
 jsp.dspace-admin.license-edit.heading                           = Default License Editor
