@@ -57,6 +57,7 @@ import org.dspace.app.xmlui.wing.element.Division;
 import org.dspace.app.xmlui.wing.element.List;
 import org.dspace.authorize.AuthorizeException;
 import org.dspace.content.Collection;
+import org.dspace.content.LicenseUtils;
 import org.dspace.license.CreativeCommons;
 import org.dspace.core.LogManager;
 import org.xml.sax.SAXException;
@@ -150,7 +151,9 @@ public class LicenseStep extends AbstractSubmissionStep
         // Get the full text for the actuial licese
 		Collection collection = submission.getCollection();
 		String actionURL = contextPath + "/handle/"+collection.getHandle() + "/submit/" + knot.getId() + ".continue";
-		String licenseText = collection.getLicense();
+		String licenseText = LicenseUtils.getLicenseText(context
+                .getCurrentLocale(), collection, submission.getItem(),
+                submission.getSubmitter());
 		
 		Division div = body.addInteractiveDivision("submit-license",actionURL, Division.METHOD_POST,"primary submission");
 		div.setHead(T_submission_head);
