@@ -1167,7 +1167,13 @@ plugin.sequence.org.dspace.plugin.CommunityHomeProcessor = \
 plugin.sequence.org.dspace.plugin.CollectionHomeProcessor = \
         org.dspace.app.webui.components.RecentCollectionSubmissions
 
-
+#### Submission License substitution variables ####
+# it is possible include contextual information in the submission license using substitution variables
+# the text substitution is driven by a plugin implementation
+plugin.named.org.dspace.content.license.LicenseArgumentFormatter = \
+	org.dspace.content.license.SimpleDSpaceObjectLicenseFormatter = collection, \
+	org.dspace.content.license.SimpleDSpaceObjectLicenseFormatter = item, \
+	org.dspace.content.license.SimpleDSpaceObjectLicenseFormatter = eperson
 
 #### Syndication Feed (RSS) Settings ######
 
