@@ -116,6 +116,7 @@
  - [DS-270] Make delegate admin permissions configurable
  - [DS-436] SWORD Authenticator doesn't support the special groups infrastructure
  - [DS-415] Create groups via admin UI authorization denied
+ - [DS-217] Hardcoded String in the license bitstream
 
 (Tim Donohue)
  - [DS-218] Cannot add/remove email subscriptions from Profile page in XMLUI
